Fix alignment issues

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,3 +1,10 @@
 .float-right {
     float: right;
 }
+
+/* make sure all elements aligned left in nav-bar collapse */
+@media screen and (max-width: 768px) {
+    .float-right {
+        float: left;
+    }
+}
